<resources>
    <string name="app_name">CAT APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nicholas Ochieng</string>
    <string name="nav_header_subtitle">noc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_quit">Logout</string>

    <string name="menu_home">Home</string>
    <string name="tickets">Tickets</string>
    <string name="menu_history">History</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="ticket_number">############</string>
    <string name="arrow">     ------------ </string>
    <string name="destination">Destination</string>
    <string name="starting_from">Starting Athi River</string>
    <string name="ticket_owner">Tobey Abanofor</string>
    <string name="title_activity_ticket">TicketActivity</string>
    <string name="option_1">Nairobi</string>
    <string name="option_2">Athi</string>
    <string name="option_3">Source</string>
    <string name="option_4">Nakuru</string>
    <string name="option_5">Kiambu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="countries_array">
        <item>Nairobi</item>
        <item>Mombasa</item>
        <item>Athi River</item>
        <item>Kiambu</item>
        <item>Nakuru</item>
        <item>Naivasha</item>
        <item>Kisumu</item>
        <item>Meru</item>
    </string-array>
</resources>