<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="5dp"
        android:id="@+id/ticket_card"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <!--<TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="Name: "
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:id="@+id/name_label"
                android:paddingLeft="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/owner_name"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:text="@string/ticket_owner"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/name_label"
                />-->

            <TextView
                android:id="@+id/starting_from"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/starting_from"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/divider"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/owner_name"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/starting_from"
                android:paddingLeft="20dp"
                android:text="@string/arrow"
                android:textColor="@color/teal_200" />

            <TextView
                android:id="@+id/destination"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/divider"
                android:text="@string/destination"
                android:textColor="@color/dark_blue"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="504dp"
                android:layout_marginLeft="40dp"
                android:layout_below="@id/starting_from"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/train1" />

            <TextView
                android:id="@+id/ticket_number_label"
                android:layout_width="75dp"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/starting_from"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:text="S/N:"
                android:textColor="@color/grey"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ticket_number"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/destination"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ticket_number"
                android:textColor="@color/orange_200" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>